# TaskPilot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
task_manager/: settings.py  urls.py
tasks/: agent.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
