[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["neeraj <neerajsunil2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
langgraph = "^0.3.11"
langchain = "^0.3.20"
pydantic-ai = "^0.0.43"
python-dotenv = "^1.0.1"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
